# taxi-chicago-etl

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: load.ipynb
sql/: create.sql  drop.sql
