[tool.poetry]
name = "taxi-chicago-etl"
version = "0.1.0"
description = ""
authors = ["Alexey Alyoshko <alexey.alyoshko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
sqlalchemy = "^2.0.30"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
